samples/_failures_safe/1761652112_cb18e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4286e92f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4286e92f.c:149:13: error: expected expression at end of input
  149 |             advance =
      |             ^~~~~~~
./samples/SAFE/__tmp_4286e92f.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4286e92f.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4286e92f.c:149:13: error: expected declaration or statement at end of input
